<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:gravity="center"
    tools:context=".Activity.MenuActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/cat"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/find_a_cat_button"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/find_a_cat_button"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/favorite_cats_button"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/favorite_cats_button"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/cat_fact_textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/cat_fact_text"
        android:textColor="#000000"
        android:textSize="20dp" />

</LinearLayout>